--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -3564,8 +3564,13 @@ ul.pagination li.active a,
   background-color: #fafafa;
   border: 1px solid #eaeaea; }
 
-.nav-pills > li + li {
-  margin-left: 5px; }
+@media (min-width: 768px) {
+  .nav-pills > li + li {
+    margin-left: 5px; } }
+
+@media (max-width: 768px) {
+  .nav-pills > li + li {
+    margin-left: 0px; } }
 
 .nav-pills.nav-stacked > li + li {
   margin-left: 0; }
@@ -7963,9 +7968,6 @@ html, body, .container {
   width: 100%;
   left: 0; }
 
-.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus, .nav-pills > li > a:hover, .nav-pills > li > a:focus {
-  border-bottom: 3px solid #78cbd1; }
-
 .col-xs-9,
 .col-sm-9,
 .col-md-9,
@@ -8173,6 +8175,15 @@ html, body, .container {
 #project-title {
   margin: 60px 0; }
 
+@media (min-width: 768px) {
+  .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus, .nav-pills > li > a:hover, .nav-pills > li > a:focus {
+    border-bottom: 3px solid #78cbd1; } }
+
+@media (max-width: 768px) {
+  .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus, .nav-pills > li > a:hover, .nav-pills > li > a:focus {
+    background-color: #78cbd1;
+    color: #ffffff; } }
+
 #pill-images .caption {
   text-align: center; }
 
@@ -8192,8 +8203,11 @@ html, body, .container {
 
 ul.resources {
   list-style-type: none;
-  font-size: 19px;
   padding-left: 8px; }
+  ul.resources * {
+    font-size: 15px; }
+  ul.resources a {
+    font-size: 19px; }
 
 /* Large and Medium devices (desktops, tablets less than 1199px) */
 @media (min-width: 768px) {
